--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.95.3",
     "alias": "^0.0.5",
     "firebase": "^12.9.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "^19.2.3",
     "react-dom": "19.2.3",
