--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.1.6",
     "react": "^19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-quill-new": "^3.8.3",
     "sonner": "^2.0.7"
   },
